--- a/public/stylesheets/components/card/_comment-card.scss
+++ b/public/stylesheets/components/card/_comment-card.scss
@@ -7,6 +7,8 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    padding-bottom: 1rem;
+    border-bottom: 2px solid colors.$bg2;
 
     &__author-date {
         display: flex;
