--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -83,6 +83,8 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding-bottom: 1rem;
+  border-bottom: 2px solid rgb(36, 36, 36);
 }
 .comment-card__author-date {
   display: flex;
@@ -516,9 +518,9 @@
   font-size: 2rem;
   border-bottom: 4px solid rgb(36, 36, 36);
 }
-.blog-post-page__comment {
-  padding-bottom: 1rem;
-  border-bottom: 2px solid rgb(36, 36, 36);
+.blog-post-page__comment-create-form, .blog-post-page__reply-create-form {
+  display: flex;
+  flex-direction: column;
 }
 .blog-post-page__reply-container {
   margin-left: 4rem;
