--- a/views/components/list/blogPostReactionList.pug
+++ b/views/components/list/blogPostReactionList.pug
@@ -74,7 +74,7 @@ ul.blog-post__reaction-list
             '/images/commentIcon.png',
             blogPost.comments.length,
             { 
-                'href': '#comment-section-heading',
+                'href': '#comment-section',
                 'class': [
                     '-padding-even-small',
                     '-button',
