--- a/public/stylesheets/components/card/_comment-card.scss
+++ b/public/stylesheets/components/card/_comment-card.scss
@@ -8,6 +8,7 @@
     flex-direction: column;
     gap: 1rem;
     padding-bottom: 1rem;
+    margin-bottom: 1rem;
     border-bottom: 2px solid colors.$bg2;
 
     &__author-date {
