--- a/views/layouts/author.pug
+++ b/views/layouts/author.pug
@@ -5,7 +5,7 @@ include ../components/list/buttonList
 block navbar
     .navbar__left
         +iconElement(
-            'button'
+            'button',
             '/images/burgerIcon.png',
             null,
             {
@@ -53,7 +53,7 @@ block navbar
         )
         
         +iconElement(
-            'button'
+            'button',
             '/images/profileIcon.png',
             null,
             {
