--- a/public/stylesheets/components/list/_icon-element-list.scss
+++ b/public/stylesheets/components/list/_icon-element-list.scss
@@ -10,6 +10,10 @@
         justify-content: center;
     }
 
+    &.-align-start {
+        align-items: start;
+    }
+
     &.-gap-small {
         gap: 1rem;
     }
