--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -304,6 +304,9 @@
 .icon-element-list.-center {
   justify-content: center;
 }
+.icon-element-list.-align-start {
+  align-items: start;
+}
 .icon-element-list.-gap-small {
   gap: 1rem;
 }
@@ -315,30 +318,20 @@
   right: 0;
   border-left: 2px solid rgb(36, 36, 36);
 }
-.account-sidebar__signup-prompt {
-  height: 50%;
-}
 .account-sidebar__overview {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
+  margin-bottom: 1rem;
   padding-bottom: 1rem;
-  margin-bottom: 0.5rem;
   border-bottom: 2px solid rgb(36, 36, 36);
 }
-.account-sidebar__avatar {
-  height: 3rem;
-  width: 3rem;
-}
-.account-sidebar__username {
-  font-size: 1.5rem;
+.account-sidebar__signup-prompt {
+  height: 50%;
 }
 .account-sidebar__logout {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 0.5rem;
-  padding-top: 0.5rem;
+  margin-top: 1rem;
+  padding-top: 1rem;
   border-top: 2px solid rgb(36, 36, 36);
   font-size: 1.2rem;
 }
