Fixed user blog posts reaction counter bug

--- a/views/components/list/blogPostList.pug
+++ b/views/components/list/blogPostList.pug
@@ -53,7 +53,9 @@ mixin blogPostList(blogPosts, attrs={})
                             },
                             'iconElement': {
                                 'class': [
-                                    '-small'
+                                    '-small',
+                                    '-gap-small',
+                                    '-avatar'
                                 ]
                             }
                         }
