--- a/views/pages/userProfile.pug
+++ b/views/pages/userProfile.pug
@@ -144,7 +144,8 @@ block page
                                 },
                                 'iconElement': {
                                     'class': [
-                                        '-gap-small'
+                                        '-gap-small',
+                                        '-avatar'
                                     ]
                                 }
                             }
@@ -191,7 +192,8 @@ block page
                                     },
                                     'iconElement': {
                                         'class': [
-                                            '-gap-small'
+                                            '-gap-small',
+                                            '-avatar'
                                         ]
                                     }
                                 }
