--- a/public/stylesheets/components/icon/_icon-element.scss
+++ b/public/stylesheets/components/icon/_icon-element.scss
@@ -7,6 +7,7 @@
     align-items: center;
 
     &__icon {
+        flex: none;
         height: iSizes.$medium;
         width: iSizes.$medium;
     }
