--- a/views/layouts/toolbars.pug
+++ b/views/layouts/toolbars.pug
@@ -3,5 +3,6 @@ extends root
 block content
     .navbar
         block navbar
+    .navbar-dropdown-container.-gone
     .page-container
         block sidebars
