--- a/public/stylesheets/pages/_blog-post.scss
+++ b/public/stylesheets/pages/_blog-post.scss
@@ -3,6 +3,7 @@
 @use '../globals/font-sizes' as fSizes;
 
 .blog-post-page {
+    width: 100%;
     padding-top: 1rem;
     padding-bottom: 1rem;
     
