--- a/public/stylesheets/pages/_index.scss
+++ b/public/stylesheets/pages/_index.scss
@@ -1,7 +1,5 @@
 .index-page {
     width: 100%;
-    
-    &__blog-post-card-pair {
-        margin-top: 2rem;
-    }
+    padding-bottom: 2rem;
+    padding-top: 2rem;
 }
