--- a/views/components/list/blogPostList.pug
+++ b/views/components/list/blogPostList.pug
@@ -8,7 +8,7 @@ mixin blogPostList(blogPosts, attrs={})
                 .blog-post-item__top 
                     .blog-post-item__title= blogPost.title
                     .blog-post-item__date-group
-                        .blog-post-item__published= `Published: ${blogPost.publish_date || 'N/A'}`
+                        .blog-post-item__published= `Published: ${blogPost.publish_date}`
                         .blog-post-item__last-modified= `Last modified: ${blogPost.last_modified_date}`
                 .blog-post-item__bottom
                     - let likes = '-'
