--- a/public/stylesheets/components/card/_blog-post-card.scss
+++ b/public/stylesheets/components/card/_blog-post-card.scss
@@ -15,29 +15,23 @@
     }
 
     &__overview {
+        width: 100%;
+    }
+
+    &__overlay {
         display: flex;
         flex-direction: column;
         gap: 1rem;
+        height: 100%;
         width: 100%;
         padding: 1rem;
+        background-color: rgba(0, 0, 0, 0.65);
     }
 
     &__author-date {
         display: flex;
         justify-content: space-between;
         align-items: center;
-    }
-
-    &__author-details {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 1rem;
-    }
-
-    &__avatar {
-        height: iSizes.$medium;
-        width: iSizes.$medium;
     }
 
     &__content-overview {
@@ -53,26 +47,24 @@
         font-size: fSizes.$larger
     }
 
-    &__preview {
-        max-height: 2rem;
-        margin: 0;
-        overflow: hidden;
+    &__thumbnail {
+        margin-left: auto;
+        margin-right: auto;
+        height: 75%;
+        width: 75%;
     }
 
     &__keywords-container {
         display: flex;
-        flex-direction: column;
         gap: 1rem;
     }
 
     &__keywords-heading {
         font-weight: bold;
-        margin-bottom: -10px;
     }
 
     &__keywords {
         max-height: 1.5rem;
-        padding-left: 1rem;
         padding-right: 1rem;
         overflow: hidden;
     }
