--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,26 +10,21 @@
   border-right: 2px solid rgb(36, 36, 36);
 }
 .blog-post-card__overview {
+  width: 100%;
+}
+.blog-post-card__overlay {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  height: 100%;
   width: 100%;
   padding: 1rem;
+  background-color: rgba(0, 0, 0, 0.65);
 }
 .blog-post-card__author-date {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-.blog-post-card__author-details {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-}
-.blog-post-card__avatar {
-  height: 2rem;
-  width: 2rem;
 }
 .blog-post-card__content-overview {
   display: flex;
@@ -42,23 +37,21 @@
   margin: 0;
   font-size: 1.5rem;
 }
-.blog-post-card__preview {
-  max-height: 2rem;
-  margin: 0;
-  overflow: hidden;
+.blog-post-card__thumbnail {
+  margin-left: auto;
+  margin-right: auto;
+  height: 75%;
+  width: 75%;
 }
 .blog-post-card__keywords-container {
   display: flex;
-  flex-direction: column;
   gap: 1rem;
 }
 .blog-post-card__keywords-heading {
   font-weight: bold;
-  margin-bottom: -10px;
 }
 .blog-post-card__keywords {
   max-height: 1.5rem;
-  padding-left: 1rem;
   padding-right: 1rem;
   overflow: hidden;
 }
