--- a/views/components/card/blogPostCard.pug
+++ b/views/components/card/blogPostCard.pug
@@ -2,7 +2,13 @@ include ../list/iconElementList
 include ../icon/iconElement
 
 mixin blogPostCard(blogPost, attrs={})
-  a.blog-post-card(href=`/blog-posts/${blogPost._id}`)&attributes(attrs)
+  - const thumbnail = blogPost.thumbnail
+  - const thumbnailBase64 = thumbnail.data.toString('base64')
+  - const backgroundImg = `data:${thumbnail.contentType};base64,${thumbnailBase64}`
+
+  a.blog-post-card(
+    href=`/blog-posts/${blogPost._id}`
+  )&attributes(attrs)
     .blog-post-card__stat-list
       +iconElementList(
         [{
@@ -45,31 +51,34 @@ mixin blogPostCard(blogPost, attrs={})
           }
         }
       )
-    .blog-post-card__overview
-      .blog-post-card__author-date
-        - let icon = '/images/profileIcon.png'
-        - const { profile_pic: pic , username } = blogPost.author
-          
-          if pic
-              - const base64 = pic.data.toString('base64')
-              - icon = `data:${pic.contentType};base64,${base64}`
-              
-          +iconElement(
-              'div',
-              icon,
-              username,
-              {
-                  'class': [
-                      '-avatar',
-                      '-medium',
-                      '-gap-small'
-                  ]
-              }
-          )
-        .blog-post-card__date= blogPost.publish_date
-      .blog-post-card__content-overview
-        h1.blog-post-card__title= blogPost.title
-        p.blog-post-card__preview= blogPost.content
-        .blog-post-card__keywords-container
-          .blog-post-card__keywords-heading Keywords:
-          .blog-post-card__keywords= blogPost.keywords.join(' | ')
+    .blog-post-card__overview(
+      style=`background-image: url('${backgroundImg}');`
+    )
+      .blog-post-card__overlay
+        .blog-post-card__author-date
+          - let icon = '/images/profileIcon.png'
+          - const { profile_pic: pic , username } = blogPost.author
+            
+            if pic
+                - const profilePicBase64 = pic.data.toString('base64')
+                - icon = `data:${pic.contentType};base64,${profilePicBase64}`
+                
+            +iconElement(
+                'div',
+                icon,
+                username,
+                {
+                    'class': [
+                        '-avatar',
+                        '-medium',
+                        '-gap-small'
+                    ]
+                }
+            )
+          .blog-post-card__date= blogPost.publish_date
+        .blog-post-card__content-overview
+          h1.blog-post-card__title= blogPost.title
+          p.blog-post-card__preview= blogPost.preview
+          .blog-post-card__keywords-container
+            .blog-post-card__keywords-heading Keywords:
+            .blog-post-card__keywords= blogPost.keywords.join(' | ')
