Replaced manual html escaping with DOMPurify

--- a/views/pages/userProfile.pug
+++ b/views/pages/userProfile.pug
@@ -98,6 +98,7 @@ block page
                             }
                         }
                     )
+                    p * Keywords should be separated by spaces.
                     .profile-form__buttons
                         button.profile-form__submit(
                             type='submit'
