--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,795 +1,17 @@
-.blog-post-card {
-  display: flex;
-  width: 30rem;
-  height: 20rem;
-  border: 2px solid rgb(36, 36, 36);
-}
-.blog-post-card__stat-list {
-  display: flex;
-  padding: 1rem;
-  border-right: 2px solid rgb(36, 36, 36);
-}
-.blog-post-card__overview {
-  width: 100%;
-}
-.blog-post-card__overlay {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  height: 100%;
-  width: 100%;
-  padding: 1rem;
-  background-color: rgba(0, 0, 0, 0.65);
-}
-.blog-post-card__author-date {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.blog-post-card__content-overview {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
-  gap: 1rem;
-}
-.blog-post-card__title {
-  margin: 0;
-  font-size: 1.5rem;
-}
-.blog-post-card__thumbnail {
-  margin-left: auto;
-  margin-right: auto;
-  height: 75%;
-  width: 75%;
-}
-.blog-post-card__keywords-container {
-  display: flex;
-  gap: 1rem;
-}
-.blog-post-card__keywords-heading {
-  font-weight: bold;
-}
-.blog-post-card__keywords {
-  max-height: 1.5rem;
-  padding-right: 1rem;
-  overflow: hidden;
-}
-.blog-post-card.-small {
-  height: 16rem;
-  width: 24rem;
-}
-.blog-post-card.-small .blog-post-card__stat-list {
-  padding: 0.5rem;
-}
-.blog-post-card.-small .blog-post-card__author-details {
-  gap: 0.5rem;
-}
-.blog-post-card.-small .blog-post-card__title {
-  font-size: 1.2rem;
-}
-.blog-post-card.-small .blog-post-card__preview {
-  display: none;
-}
+/* Error: Can't find stylesheet to import.
+ *    ,
+ * 19 | @use 'layouts/logging';
+ *    | ^^^^^^^^^^^^^^^^^^^^^^
+ *    '
+ *   public\stylesheets\style.scss 19:1  root stylesheet */
 
-.comment-card {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  padding-bottom: 1rem;
-  margin-bottom: 1rem;
-  border-bottom: 2px solid rgb(36, 36, 36);
-}
-.comment-card__author-date {
-  display: flex;
-  align-items: center;
-  gap: 2rem;
-}
-.comment-card__content {
-  margin: 0;
-  margin-left: 1rem;
-}
-.comment-card__toolbar {
-  display: flex;
-  gap: 3rem;
-}
-
-.form-input {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-}
-.form-input__error {
-  margin-top: 1rem;
-  color: red;
-  font-weight: bold;
-}
-
-.form-select__select {
-  margin-left: 1rem;
-}
-
-.form-textarea {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-.form-textarea__error {
-  color: red;
-  font-weight: bold;
-}
-
-.logging-form {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-.searchbar {
-  display: flex;
-  align-items: flex-end;
-  gap: 10px;
-  padding-bottom: 0.2rem;
-  padding-top: 0.2rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  border-radius: 25px;
-  background-color: rgb(54, 54, 54);
-}
-.searchbar__icon {
-  height: 1.5rem;
-  width: 1.5rem;
-  min-height: 1.5rem;
-  min-width: 1.5rem;
-}
-.searchbar__input {
-  width: 100%;
-  font-size: 1.2rem;
-  background: none;
-  border: none;
-  color: white;
-}
-
-.blog-post-fragment {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  width: 100%;
-  height: 100%;
-}
-.blog-post-fragment__title {
-  font-size: 1.5rem;
-  font-weight: bold;
-}
-.blog-post-fragment__thumbnail {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 60%;
-  aspect-ratio: 4/3;
-  margin-left: auto;
-  margin-right: auto;
-}
-.blog-post-fragment__thumbnail.-empty {
-  border: 2px dashed white;
-  font-size: 1.2rem;
-}
-.blog-post-fragment__metadata {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-.blog-post-fragment__content img {
-  width: 60%;
-}
-
-.blog-post-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-  grid-template-rows: repeat(auto-fit, minmax(20rem, 1fr));
-  gap: 4rem;
-}
-.blog-post-grid__cell {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.icon-element {
-  display: flex;
-  align-items: center;
-}
-.icon-element__icon {
-  flex: none;
-  height: 2rem;
-  width: 2rem;
-}
-.icon-element.-avatar .icon-element__icon > img {
-  border-radius: 50%;
-}
-.icon-element.-column {
-  flex-direction: column;
-}
-.icon-element.-gap-small {
-  gap: 0.5rem;
-}
-.icon-element.-gap-medium {
-  gap: 1rem;
-}
-.icon-element.-padding-even-slim {
-  padding-top: 0.1rem;
-  padding-bottom: 0.1rem;
-  padding-left: 0.1rem;
-  padding-right: 0.1rem;
-}
-.icon-element.-padding-even-small {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-.icon-element.-padding-burger-small {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-.icon-element.-small .icon-element__icon {
-  height: 1.5rem;
-  width: 1.5rem;
-}
-.icon-element.-small .icon-element__label {
-  font-size: 0.8rem;
-}
-.icon-element.-large .icon-element__icon {
-  height: 3rem;
-  width: 3rem;
-}
-.icon-element.-large .icon-element__label {
-  font-size: 1.2rem;
-}
-.icon-element.-larger .icon-element__icon {
-  height: 5rem;
-  width: 5rem;
-}
-.icon-element.-larger .icon-element__label {
-  font-size: 1.5rem;
-}
-
-.blog-post-list .blog-post-item:last-child {
-  border-bottom: none;
-}
-
-.blog-post-item {
-  padding: 0.5rem;
-  border-bottom: 2px solid rgb(36, 36, 36);
-}
-.blog-post-item:hover {
-  background-color: rgb(54, 54, 54);
-}
-.blog-post-item__top {
-  display: flex;
-  justify-content: space-between;
-  gap: 1rem;
-  margin-bottom: 1rem;
-}
-.blog-post-item__bottom {
-  display: flex;
-  justify-content: space-between;
-}
-.blog-post-item__title {
-  font-size: 1.2rem;
-}
-.blog-post-item__date-group {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.blog-post-item__actions {
-  display: flex;
-  gap: 2rem;
-}
-
-.button-list {
-  display: flex;
-}
-.button-list.-gap-small {
-  gap: 2rem;
-}
-
-.icon-element-list {
-  display: flex;
-  align-items: center;
-}
-.icon-element-list.-column {
-  flex-direction: column;
-}
-.icon-element-list.-center {
-  justify-content: center;
-}
-.icon-element-list.-align-start {
-  align-items: start;
-}
-.icon-element-list.-gap-small {
-  gap: 1rem;
-}
-.icon-element-list.-gap-medium {
-  gap: 2rem;
-}
-
-.account-sidebar {
-  right: 0;
-  border-left: 2px solid rgb(36, 36, 36);
-}
-.account-sidebar__overview {
-  margin-bottom: 1rem;
-  padding-bottom: 1rem;
-  border-bottom: 2px solid rgb(36, 36, 36);
-}
-.account-sidebar__signup-prompt {
-  height: 50%;
-}
-.account-sidebar__logout {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 1rem;
-  padding-top: 1rem;
-  border-top: 2px solid rgb(36, 36, 36);
-  font-size: 1.2rem;
-}
-.account-sidebar.-closed {
-  display: none;
-}
-
-.content-sidebar {
-  left: 0;
-  border-right: 2px solid rgb(36, 36, 36);
-}
-.content-sidebar__heading {
-  margin-bottom: 1rem;
-  font-size: 1.2rem;
-  border-bottom: 2px solid rgb(36, 36, 36);
-}
-.content-sidebar__section {
-  margin-bottom: 1rem;
-}
-.content-sidebar.-closed {
-  display: none;
-}
-
-.logging-page {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-}
-.logging-page__container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 5%;
-  padding: 4rem;
-  border: 2px solid rgb(36, 36, 36);
-}
-.logging-page__heading {
-  margin-top: 0;
-}
-
-.navbar {
-  display: flex;
-  align-items: center;
-  position: sticky;
-  top: 0;
-  padding: 1rem;
-  height: 8vh;
-  min-height: 4rem;
-  width: 100%;
-  z-index: 10;
-  border-bottom: 2px solid rgb(36, 36, 36);
-  background-color: black;
-}
-.navbar__left {
-  flex: 1;
-  display: flex;
-  align-items: center;
-  gap: 2rem;
-}
-.navbar__center {
-  flex: 2;
-  margin-left: 2rem;
-  margin-right: 2rem;
-}
-.navbar__right {
-  flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  gap: 2rem;
-}
-
-.page-container {
-  display: flex;
-  justify-content: center;
-  min-height: 100vh;
-  width: 80%;
-}
-
-.sidebar {
-  position: fixed;
-  height: 100%;
-  width: 25%;
-  padding: 1rem;
-  z-index: 10;
-  background-color: black;
-  border-bottom: 2px solid rgb(36, 36, 36);
-}
-.sidebar__title {
-  font-size: 1.5rem;
-  font-weight: bold;
-  margin-bottom: 1rem;
-  border-bottom: 4px solid rgb(36, 36, 36);
-}
-
-.signup-prompt {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-  font-size: 1.2rem;
-}
-
-.navbar-dropdown-container {
-  display: flex;
-  position: fixed;
-  height: 20rem;
-  width: 50%;
-  min-width: 40rem;
-  padding-top: calc(max(8vh, 4rem) + 1rem);
-  padding-bottom: 1rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  border: 2px solid rgb(36, 36, 36);
-  background-color: black;
-  overflow: hidden;
-}
-
-.navbar-dropdown {
-  width: 100%;
-  overflow-y: auto;
-}
-
-.blog-post-form-page {
-  display: flex;
-  align-items: flex-start;
-  width: 100%;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-.blog-post-form-page__left {
-  flex: 1;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
-}
-.blog-post-form-page__right {
-  flex: 1;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
-}
-.blog-post-form-page__heading {
-  font-size: 2rem;
-  font-weight: bold;
-}
-.blog-post-form-page__body {
-  height: 100%;
-  width: 100%;
-  padding: 1rem;
-  border: 2px solid white;
-}
-.blog-post-form-page__right > .blog-post-form-page__body {
-  overflow-y: auto;
-  overflow-wrap: break-word;
-}
-
-.blog-post-form {
-  height: 100%;
-  width: 100%;
-  border-top: 2px solid white;
-  padding-top: 1rem;
-}
-.blog-post-form__metadata {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  width: 100%;
-}
-.blog-post-form__content {
-  height: 100%;
-}
-
-.tinymce-app {
-  min-height: 100%;
-}
-
-.tox.tox-tinymce {
-  min-height: 100%;
-}
-
-.blog-post-page {
-  width: 100%;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-.blog-post-page__post-heading {
-  font-size: 2rem;
-  border-bottom: 4px solid rgb(36, 36, 36);
-}
-.blog-post-page__comment-create-form, .blog-post-page__reply-create-form {
-  margin-bottom: 2rem;
-}
-.blog-post-page__comment-create-form .form-textarea, .blog-post-page__reply-create-form .form-textarea {
-  margin-bottom: 1rem;
-}
-.blog-post-page__reply-container {
-  margin-left: 4rem;
-}
-
-.blog-post__title {
-  margin: 0;
-  border-bottom: 6px solid rgb(36, 36, 36);
-  font-size: 3rem;
-}
-.blog-post__metadata {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  margin-bottom: 2rem;
-  border-bottom: 4px solid rgb(36, 36, 36);
-}
-.blog-post__author-details {
-  flex: 1;
-  display: inline-block;
-}
-.blog-post__reaction-list {
-  flex: 2;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
-}
-.blog-post__date {
-  flex: 1;
-  text-align: right;
-}
-.blog-post__thumbnail {
-  margin-right: auto;
-  margin-left: auto;
-  width: 75%;
-}
-.blog-post__content {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-.blog-post__post-blog-separator {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  border-top: 4px solid rgb(36, 36, 36);
-  border-bottom: 4px solid rgb(36, 36, 36);
-}
-
-.index-page {
-  width: 100%;
-  padding-bottom: 2rem;
-  padding-top: 2rem;
-}
-
-.user-blog-posts-page {
-  width: 100%;
-}
-.user-blog-posts-page__heading {
-  text-align: center;
-}
-.user-blog-posts-page__toolbar {
-  display: flex;
-  align-items: center;
-  gap: 2rem;
-  margin-bottom: 2rem;
-}
-
-.user-blog-posts {
-  display: flex;
-  gap: 2rem;
-  height: 100%;
-  margin-bottom: 2rem;
-}
-.user-blog-posts__left {
-  flex: 1;
-}
-.user-blog-posts__right {
-  flex: 1;
-  overflow: auto;
-  padding: 1rem;
-  border: 2px solid rgb(36, 36, 36);
-}
-.user-blog-posts__tab-container {
-  overflow: auto;
-  border: 2px solid rgb(36, 36, 36);
-}
-
-.profile-page {
-  width: 100%;
-}
-.profile-page__heading {
-  text-align: center;
-}
-
-.profile {
-  display: flex;
-  gap: 2rem;
-}
-.profile__primary {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
-}
-.profile__secondary {
-  flex: 1;
-}
-.profile__tertiary {
-  flex: 1;
-}
-.profile__avatar {
-  height: 20rem;
-  width: 20rem;
-}
-.profile__avatar img {
-  border-radius: 50%;
-}
-.profile__username {
-  font-size: 1.5rem;
-  font-weight: bold;
-}
-.profile__heading {
-  margin-bottom: 1rem;
-  font-size: 1.2rem;
-  font-weight: bold;
-  border-bottom: 2px solid rgb(36, 36, 36);
-}
-.profile__body {
-  margin: 0;
-  margin-bottom: 2rem;
-}
-.profile__edit {
-  display: flex;
-  justify-content: center;
-}
-.profile__edit-button {
-  margin-top: 1rem;
-}
-
-.profile-form {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-.profile-form__buttons {
-  display: flex;
-  justify-content: space-around;
-}
-.profile-form.-gone {
-  display: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  font-weight: 400;
-  color: white;
-  scroll-behavior: smooth;
-}
-
-a {
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #b22eff;
-}
-
-body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 0;
-  min-height: 100vh;
-  background-color: rgb(18, 18, 18);
-}
-
-button, a.-button {
-  padding-top: 0.2rem;
-  padding-bottom: 0.2rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  color: white;
-  border: 2px solid rgb(54, 54, 54);
-  border-radius: 5px;
-  background: none;
-  font-size: 1.2rem;
-  text-decoration: none;
-}
-button:hover, a.-button:hover {
-  background-color: rgb(54, 54, 54);
-}
-button.-colorful, a.-button.-colorful {
-  color: #b22eff;
-  border: 2px solid #b22eff;
-}
-button.-colorful:hover, a.-button.-colorful:hover {
-  color: white;
-  background-color: #b22eff;
-}
-button.-tab, a.-button.-tab {
-  border-radius: 0;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-}
-
-h1, h2 {
-  text-transform: capitalize;
-}
-
-h1 {
-  font-size: 2rem;
-}
-
-h2 {
-  font-size: 1.5rem;
-}
-
-img {
-  height: 100%;
-  width: 100%;
-}
-
-input {
-  font-size: 1rem;
-}
-
-label {
-  font-weight: bold;
-}
-
-textarea {
-  margin: 0;
-  font-size: 1rem;
-  resize: none;
-}
-
-ul, ol {
-  list-style-type: none;
-  padding-left: 0;
-  margin: 0;
-}
-
-.-hidden {
-  visibility: hidden;
-}
-
-.-gone {
-  display: none;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Can't find stylesheet to import.\a    \2577 \a 19 \2502  @use 'layouts/logging';\a    \2502  ^^^^^^^^^^^^^^^^^^^^^^\a    \2575 \a   public\\stylesheets\\style.scss 19:1  root stylesheet";
 }
