Fixed stylesheet @use paths

--- a/public/stylesheets/views/components/form/_searchbar.scss
+++ b/public/stylesheets/views/components/form/_searchbar.scss
@@ -1,6 +1,6 @@
-@use '../../globals/colors';
-@use '../../globals/font-sizes' as fSizes;
-@use '../../globals/icon-sizes' as iSizes;
+@use '../../../globals/colors';
+@use '../../../globals/font-sizes' as fSizes;
+@use '../../../globals/icon-sizes' as iSizes;
 
 
 .searchbar {
