--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,28 +1,28 @@
-@use 'components/card/blog-post-card';
-@use 'components/card/comment-card';
-@use 'components/form/form-input';
-@use 'components/form/form-select';
-@use 'components/form/form-textarea';
-@use 'components/form/logging-form';
-@use 'components/form/searchbar';
-@use 'components/fragment/blog-post-fragment';
-@use 'components/grid/blog-post-grid';
-@use 'components/icon/icon-element';
-@use 'components/list/blog-post-list';
-@use 'components/list/button-list';
-@use 'components/list/icon-element-list';
-@use 'components/toolbar/account-sidebar';
-@use 'components/toolbar/content-sidebar';
 @use 'globals/colors';
 @use 'globals/font-sizes' as fSizes;
 @use 'globals/icon-sizes' as iSizes;
-@use 'layouts/logging';
-@use 'layouts/toolbars';
-@use 'pages/blog-post-form';
-@use 'pages/blog-post';
-@use 'pages/index';
-@use 'pages/user-blog-posts';
-@use 'pages/user-profile';
+@use 'views/components/card/blog-post-card';
+@use 'views/components/card/comment-card';
+@use 'views/components/form/form-input';
+@use 'views/components/form/form-select';
+@use 'views/components/form/form-textarea';
+@use 'views/components/form/logging-form';
+@use 'views/components/form/searchbar';
+@use 'views/components/fragment/blog-post-fragment';
+@use 'views/components/grid/blog-post-grid';
+@use 'views/components/icon/icon-element';
+@use 'views/components/list/blog-post-list';
+@use 'views/components/list/button-list';
+@use 'views/components/list/icon-element-list';
+@use 'views/components/toolbar/account-sidebar';
+@use 'views/components/toolbar/content-sidebar';
+@use 'views/layouts/logging';
+@use 'views/layouts/toolbars';
+@use 'views/pages/blog-post-form';
+@use 'views/pages/blog-post';
+@use 'views/pages/index';
+@use 'views/pages/user-blog-posts';
+@use 'views/pages/user-profile';
 
 
 * {
