--- a/public/stylesheets/views/layouts/_toolbars.scss
+++ b/public/stylesheets/views/layouts/_toolbars.scss
@@ -1,6 +1,6 @@
-@use '../globals/colors';
-@use '../globals/font-sizes' as fSizes;
-@use '../globals/icon-sizes' as iSizes;
+@use '../../globals/colors';
+@use '../../globals/font-sizes' as fSizes;
+@use '../../globals/icon-sizes' as iSizes;
 
 $navbar-height: 8vh;
 $navbar-min-height: 4rem;
