--- a/public/stylesheets/views/pages/_blog-post-form.scss
+++ b/public/stylesheets/views/pages/_blog-post-form.scss
@@ -1,5 +1,5 @@
-@use '../globals/font-sizes' as fSizes;
-@use '../globals/icon-sizes' as iSizes;
+@use '../../globals/font-sizes' as fSizes;
+@use '../../globals/icon-sizes' as iSizes;
 
 .blog-post-form-page {
     display: flex;
